# ecta2024_experiment

./: .gitignore  CMakeLists.txt
bash/: x_scaling_ela.sh  x_translation_ela.sh
config/: 100_10d_rotation_matrices.txt  controlled_10d_rotation_matrices.txt  random_look_10d_rotation_matrices.txt  samplingDOE.txt  tvec.txt
scripts/: analysis.py  check_trace.py  doe2vec_calculation.py  ela_calculation.py  ela_database.py  generate_translation_distance.py  ks_test_wd.py  origin_ela.py  plot_classify_doe2vec.py  plot_doe2vec.py  plot_ks_emd.py  reduce_dim.py  sensitive.py  trace_distribution.py  tvec_database.py  validation.py
transformations/: CEC2022.py  doe_sampling.py  hf_cf.py  x_rotation.cpp  x_scaling.cpp  x_translation.cpp  y_scaling.py  y_translation.py
transformations/input_data/: shift_data_11.txt  shift_data_6.txt
